--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 清华大学开源软件镜像站
+title: EduStack镜像站
 brand: Tsinghua Open Source Mirror
 baseurl: "" # the subpath of your site, e.g. /blog
 permalink: "/:categories/:title/"
