--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,6 +15,7 @@ jobs:
         ruby-version: 2.6.x
     - name: Build and test with Rake
       run: |
-        gem install bundler
+        gem install bundle
+        gem install build
         bundle install --jobs 4 --retry 3
-        bundle exec rake
+        jekyll build
